[package]
name = "rusty_sudoku"
version = "0.1.0"
authors = ["NicolenaStiles <nicolena.stiles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

# for the GUI
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
crossterm = { version = "0.22.1", features = [ "serde" ] }
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
